# lab

./: .gitignore  .mergify.yml  README.md
.github/workflows/: build-provisioning.yml  images-sync.yml  labctl.yml  packer-vyos.yml  updatecli.yml  vyos-build.yml  warpbuild-preflight.yml
bootstrap/genesis/scripts/: build-vyos-image.sh
docs/architecture/: 01_introduction_and_goals.md  02_constraints.md  03_context_and_scope.md  04_solution_strategy.md  06_runtime_view.md  07_deployment_view.md  10_quality.md  11_risks.md  12_glossary.md  index.md
docs/architecture/05_building_blocks/: 01_harvester_hci.md  02_tinkerbell_provisioning.md  03_platform_cluster.md  04_downstream_clusters.md
docs/architecture/08_concepts/: argocd.md  control_plane.md  harvester.md  load_balancing.md  networking.md  observability.md  secrets_and_identity.md  service_mesh.md  storage.md
docs/architecture/09_design_decisions/: 001_use_bgp_loadbalancing.md  002_networking_topology.md  (+5 more)
docs/design/: image-pipeline.md
images/: .sops.yaml  e2.sops.yaml  images.yaml  packer-ssh.sops.yaml
provisioning/bootstrap/: DESIGN.md  README.md  build.sh  justfile
provisioning/bootstrap/integration/: README.md  pyproject.toml
provisioning/bootstrap/integration/tests/: __init__.py  config.py  conftest.py  infrastructure.py  test_bootstrap_appliance.py  verification.py
provisioning/talos/: index.yaml
scripts/: check-version-exists.py  download-iso.py  prepend-version.py  upload-artifacts.py
tools/labctl/: .golangci.yml  go.mod  go.sum  justfile  main.go
updatecli/: talos.yaml
(+71 files in other folders)
